--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs":"^2.4.3",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
